reintroduced common packages

--- a/apps/functions/public/index.html
+++ b/apps/functions/public/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>API Running</title>
 </head>
+
 <body>
-    Api running
+    <main style="margin: 0 auto; display: flex; flex-direction: column; gap: 8px">
+        <div
+            style="display: flex; flex-direction: row; gap: 8px; align-items: center; height: 60px; padding: 8px; border: solid 1px #0077c2; border-radius: 8px;">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200" style="height: 100%;">
+                <rect x="0" y="0" width="200" height="200" fill="#0077c2" />
+                <text x="20" y="175" font-size="20" fill="#ffffff" font-family="sans-serif">TypeSafe Airways</text>
+                <path d="M150,100 L100,50 L50,100 L75,100 L75,150 L100,125 L125,150 L125,100 Z" fill="#ffffff" />
+            </svg>
+            <p style="color: #0077c2">API running</p>
+        </div>
+        <div>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nobis tenetur distinctio, recusandae cum excepturi
+            esse eius laborum aliquam? Veniam accusantium placeat provident id repellat laboriosam odit eum quas nam
+            ipsa.
+        </div>
+    </main>
 </body>
+
 </html>
